[tool.poetry]
name = "blackbox_exporter"
version = "0.1.0"
description = ""
authors = ["Mohammad Parvin <m.parvin986@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.71.0"
uvicorn = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
